compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__call_snapshots@function_param_1.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: let _ = call(0);
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:8:16,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: call,
                            type_arguments: [],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:13:14,
                                    kind: Literal(
                                        Literal {
                                            id: 11743562013128004906,
                                            location: <internal>:13:14,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 11743562013128004906,
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:16,
    },
]
