compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__conditional_snapshots@if_statements.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "if true { let a = 0; let b = 0; }"
---
[
    Statement {
        id: 0,
        kind: If(
            If {
                id: 0,
                cases: [],
                location: <internal>:0:33,
            },
        ),
        location: <internal>:0:33,
    },
]
