compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__doc_comments_snapshots@struct.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "/// This is a doc comment\n        struct Foo { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Struct(
                StructDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    builtin: false,
                    properties: [],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:34:48,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
